@@ -50,10 +50,14 @@ Changelog for 1.3.12
 * Corrected missing "search assets" menu item (Chris T)
 * Net Book Value report now shows undepreciated assets (Chris T)
 * Permissions fixes to fixed asset module (Chris T)
+* Corrected NULL being saved in method for asset class (Chris T)
+* Corrected UI glitch on saving asset class (Chris T)
+* Updated Slony setup scripts (Chris T)
 
 Hilton D is Hilton Day
 Frans S is Frans van der Star
 Chris T is Chris Travers
+
 Changelog for 1.3.11
 * Fixed outstanding report for payment reversal and partial payments (Chris T)
 * Fixed handling of non-existing roles in menu grants (Chris T)
